--- a/.src/FMain.form
+++ b/.src/FMain.form
@@ -133,7 +133,7 @@
       AutoResize = True
     }
     { TimerExt #Timer
-      #MoveScaled(47,7)
+      #MoveScaled(50,13)
     }
   }
   { HBoxAbout HBox
@@ -171,12 +171,24 @@
         Expand = True
       }
     }
+    { Separator6 Separator
+      MoveScaled(0,8.7143,14,0)
+      Background = Color.Black
+    }
     { HBoxProgress HBox
       MoveScaled(3,9,43,1.2857)
-      Padding = 2
+      Background = Color.DarkGreen
+      { Separator8 Separator
+        MoveScaled(0,0,0,1.2857)
+        Background = Color.Black
+      }
       { PanelProgress Panel
         MoveScaled(3,0,15,1)
         Background = Color.Yellow
+      }
+      { Separator7 Separator
+        MoveScaled(43,0,0,1.2857)
+        Background = Color.Black
       }
     }
     { HSplitSearch HSplit
@@ -185,6 +197,7 @@
       { TextAreaFilesProcessed TextArea
         MoveScaled(18,1,9,8)
         Expand = True
+        ReadOnly = True
       }
       { GridViewFound GridView
         MoveScaled(29,1,10,8)
@@ -193,16 +206,21 @@
     }
     { HBox4 HBox
       MoveScaled(1,21,45.4286,4)
+      { LabelTime Label
+        MoveScaled(0,0,10,2)
+        Expand = True
+      }
       { LabelHelp Label
-        MoveScaled(1,1,20,2)
+        MoveScaled(22,1,20,2)
         Expand = True
         Alignment = Align.Right
       }
     }
     { HBox3 HBox
       MoveScaled(1,25,45.4286,4)
-      { LabelTime Label
-        MoveScaled(1,1,10,2)
+      { LabelFile Label
+        MoveScaled(1,1,25,3)
+        Font = Font["Bold"]
         Expand = True
       }
       { ButtonStop Button AllButtons
@@ -226,12 +244,12 @@
     }
     { ButtonView ToggleButton AllButtons
       Name = "ButtonView"
-      MoveScaled(29,0,15,4)
+      MoveScaled(29,0,18,4)
       Text = Shortcut(("View"), "V")
       Picture = Picture["icon:/22/text-fill"]
     }
     { Panel4 Panel
-      MoveScaled(46,1,3,3)
+      MoveScaled(47,1,3,3)
       Expand = True
     }
     { HBoxCheckBoxes HBox
@@ -256,7 +274,7 @@
     { LabelSearch Label
       MoveScaled(0,0,17,5)
       AutoResize = True
-      Text = ("To search for ")
+      Text = ("Search for ")
     }
     { TextBoxSearch TextBox
       MoveScaled(23,0,20,4)
@@ -273,8 +291,8 @@
     }
     { ButtonExtensions Button AllButtons
       Name = "ButtonExtensions"
-      MoveScaled(66,0,14,4)
-      Text = Shortcut(("Extensions"), "E")
+      MoveScaled(67,0,18,4)
+      Text = Shortcut(("Extensions"), "x")
       Picture = Picture["icon:/22/menu"]
     }
   }
@@ -283,32 +301,32 @@
   }
   { HBox2 HBox
     MoveScaled(0,65,95.7143,4)
-    { ButtonSearch ToggleButton AllButtons
-      Name = "ButtonSearch"
-      MoveScaled(0,0,14,4)
-      Enabled = False
-      Text = Shortcut(("Search"), "S")
-      Picture = Picture["icon:/22/find"]
+    { ButtonExit Button AllButtons
+      Name = "ButtonExit"
+      MoveScaled(1,0,18,4)
+      Text = Shortcut(("Exit program"), "E")
+      Picture = Picture["icon:/22/close"]
     }
     { Panel1 Panel
-      MoveScaled(17,1,3,2)
+      MoveScaled(28,1,3,2)
       Expand = True
     }
     { ButtonAbout ToggleButton AllButtons
       Name = "ButtonAbout"
-      MoveScaled(25,0,14,4)
+      MoveScaled(35,0,18,4)
       Text = Shortcut(("About"), "A")
       Picture = Picture["icon:/22/info"]
     }
     { Panel2 Panel
-      MoveScaled(40,1,3,2)
+      MoveScaled(66,1,3,2)
       Expand = True
     }
-    { ButtonExit Button AllButtons
-      Name = "ButtonExit"
-      MoveScaled(46,0,14,4)
-      Text = Shortcut(("Exit"), "E")
-      Picture = Picture["icon:/22/close"]
+    { ButtonSearch ToggleButton AllButtons
+      Name = "ButtonSearch"
+      MoveScaled(71,0,18,4)
+      Enabled = False
+      Text = Shortcut(("Search"), "S")
+      Picture = Picture["icon:/22/find"]
     }
   }
 }
