--- a/.src/FMain.form
+++ b/.src/FMain.form
@@ -24,10 +24,8 @@
     Expand = True
     Padding = 2
     { DirChooserFF DirChooser
-      MoveScaled(1,1,15,16)
-      Mouse = Mouse.Pointing
+      MoveScaled(3,3,12,16)
       Expand = True
-      ShowBookmark = False
       ShowSplitter = False
     }
   }
@@ -201,17 +199,27 @@
       }
       { GridViewFound GridView
         MoveScaled(29,1,10,8)
+        Mouse = Mouse.Pointing
         Expand = True
       }
     }
     { HBox4 HBox
       MoveScaled(1,21,45.4286,4)
+      { ButtonStop Button AllButtons
+        Name = "ButtonStop"
+        MoveScaled(0,0,14,4)
+        Text = Shortcut(("Stop"), "S")
+        Picture = Picture["icon:/22/stop"]
+      }
+      { Panel16 Panel
+        MoveScaled(15,1,3,3)
+      }
       { LabelTime Label
-        MoveScaled(0,0,10,2)
+        MoveScaled(19,1,10,2)
         Expand = True
       }
       { LabelHelp Label
-        MoveScaled(22,1,20,2)
+        MoveScaled(30,1,12,2)
         Expand = True
         Alignment = Align.Right
       }
@@ -222,12 +230,7 @@
         MoveScaled(1,1,25,3)
         Font = Font["Bold"]
         Expand = True
-      }
-      { ButtonStop Button AllButtons
-        Name = "ButtonStop"
-        MoveScaled(29,0,14,4)
-        Text = Shortcut(("Stop"), "S")
-        Picture = Picture["icon:/22/stop"]
+        Alignment = Align.Right
       }
     }
   }
@@ -294,6 +297,9 @@
       MoveScaled(67,0,18,4)
       Text = Shortcut(("Extensions"), "x")
       Picture = Picture["icon:/22/menu"]
+    }
+    { TimerWorking #Timer
+      #MoveScaled(60,-2)
     }
   }
   { Panel3 Panel
